<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rigot.inclass04.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordCountLabel"
        android:id="@+id/passCountLabel"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passCountSeekbar"
        android:layout_below="@+id/passCountLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:indeterminate="false"
        android:max="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordLengthLabel"
        android:id="@+id/passLengthLabel"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/passCountSeekbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passLengthSeekbar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:max="23" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordLabel"
        android:id="@+id/passwordLabel"
        android:layout_below="@+id/passLengthSeekbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generateButton"
        android:id="@+id/threadButton"
        android:layout_below="@+id/passwordLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generateButtonAsync"
        android:id="@+id/asyncButton"
        android:layout_below="@+id/threadButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView"
        android:layout_above="@+id/threadButton"
        android:layout_toRightOf="@+id/passwordLabel"
        android:layout_toEndOf="@+id/passwordLabel" />

</RelativeLayout>
